--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,7 +8,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".View.MainActivity"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:background="@color/white">
 
     <TextView
         android:id="@+id/stat_text"
@@ -20,6 +21,7 @@
         android:textSize="15sp"
         android:fontFamily="sans-serif-black"
         android:textColor="@color/black"
+        android:visibility="gone"
         />
 
     <androidx.recyclerview.widget.RecyclerView
