--- a/app/src/main/res/layout/adapter_lay.xml
+++ b/app/src/main/res/layout/adapter_lay.xml
@@ -5,16 +5,21 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:cardBackgroundColor="@color/white"
-        app:cardElevation="5dp"
-        android:layout_margin="3dp">
+        app:cardElevation="3dp"
+        android:layout_margin="3dp"
+        android:id="@+id/card_data">
 <LinearLayout
-    android:orientation="vertical"
+    android:orientation="horizontal"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:padding="3dp"
 
     >
-
+    <LinearLayout
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:layout_weight="1">
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -22,27 +27,28 @@
         android:text="Title"
         android:textColor="@color/colorPrimary"
         android:textSize="15sp"
+        android:fontFamily="sans-serif-black"
 
         />
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal">
+
         <TextView
-            android:layout_width="0dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/description"
-            android:layout_weight="1.5"
             android:textSize="13sp"
+            android:textColor="@color/black"
+            android:fontFamily="sans-serif"
             android:text="Beavers are second only to humans in their ability to manipulate and change their environment. They can measure up to 1.3 metres long. A group of beavers is called a colony"
             />
-        <ImageView
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:id="@+id/title_img"
-            android:layout_weight="0.5"
-            android:src="@mipmap/ic_launcher"/>
+
     </LinearLayout>
+    <ImageView
+        android:layout_width="0dp"
+        android:layout_height="match_parent"
+        android:id="@+id/title_img"
+        android:layout_weight="0.5"
+        android:src="@drawable/innovatepic"
+        />
 
 </LinearLayout>
     </androidx.cardview.widget.CardView>
