--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3F51B5</color>
+    <color name="colorPrimary">#0622BD</color>
     <color name="colorPrimaryDark">#011272</color>
-    <color name="colorAccent">#D81B60</color>
+    <color name="colorAccent">#0622BD</color>
     <color name="black">#000000</color>
     <color name="white">#FFFFFF</color>
 </resources>
