--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -26,7 +26,8 @@
     <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_below="@+id/stat_text">
+    android:layout_below="@+id/stat_text"
+        android:id="@+id/swipeRefresh">
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/canada_recyclerView"
@@ -45,6 +46,7 @@
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
         android:layout_marginTop="8dp"
+        android:visibility="gone"
 
         />
 
