--- a/app/src/main/res/layout/activity_call_fragment.xml
+++ b/app/src/main/res/layout/activity_call_fragment.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".View.CallFragmentActivity">
+    tools:context=".View.Activity.MainActivity">
     <FrameLayout
         android:id="@+id/details_fragment"
         android:layout_width="match_parent"
