--- a/app/src/main/res/layout/adapter_lay.xml
+++ b/app/src/main/res/layout/adapter_lay.xml
@@ -4,19 +4,19 @@
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:cardElevation="3dp"
-        android:layout_margin="3dp"
+        app:cardElevation="@dimen/padding"
+        android:layout_margin="@dimen/padding"
         android:id="@+id/card_data">
 <LinearLayout
     android:orientation="horizontal"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:padding="3dp"
+    android:padding="@dimen/padding"
     android:background="@drawable/adapterbackground"
 
     >
     <LinearLayout
-        android:layout_width="0dp"
+        android:layout_width="@dimen/width"
         android:layout_height="wrap_content"
         android:orientation="vertical"
         android:layout_weight="1">
@@ -24,9 +24,9 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/title"
-        android:text="Title"
+        android:text="@string/title"
         android:textColor="@color/colorPrimary"
-        android:textSize="15sp"
+        android:textSize="@dimen/fontSize_large"
         android:fontFamily="sans-serif-black"
 
         />
@@ -35,15 +35,14 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/description"
-            android:textSize="13sp"
+            android:textSize="@dimen/fontSize_small"
             android:textColor="@color/black"
             android:fontFamily="sans-serif"
-            android:text="Beavers are second only to humans in their ability to manipulate and change their environment. They can measure up to 1.3 metres long. A group of beavers is called a colony"
             />
 
     </LinearLayout>
     <ImageView
-        android:layout_width="0dp"
+        android:layout_width="@dimen/width"
         android:layout_height="match_parent"
         android:id="@+id/title_img"
         android:layout_weight="0.5"
